# QHugoResourceViewer

./: .gitignore  CMakeLists.txt  QHugoResourceViewer  QHugoResourceViewer.pro  README.md  hugoresource.cpp  hugoresource.h  hugoviewer.cpp  hugoviewer.h  main.cpp  makefile.linux  vcpkg.json
.github/workflows/: cd.yml
formats/: brsfile.cpp  brsfile.h  cbrfile.cpp  cbrfile.h  cgffile.cpp  lzpfile.cpp  lzpfile.h  palfile.cpp  palfile.h  pbrfile.cpp  pbrfile.h  rawfile.cpp  rawfile.h  tilfile.cpp
hugo/: hugoresource.cpp  hugoviewer.cpp  hugoviewer.h
include/formats/: cgffile.h  rawfile.h  tilfile.h  wavfile.h
include/hugo/: hugo_archive_processor.h  hugoresource.h  hugoviewer.h
misc/Darwin/scripts/: remove_quarantine_after_install.sh
misc/Linux/AppDir/: AppRun  QHugoResourceViewer.desktop  app.desktop
misc/Linux/AppDir/usr/share/applications/: QHugoResourceViewer.desktop
src/formats/: brsfile.cpp  cbrfile.cpp  cgffile.cpp  lzpfile.cpp  palfile.cpp  pbrfile.cpp  rawfile.cpp  tilfile.cpp  wavfile.cpp
src/hugo/: hugo_archive_processor.cpp  hugoresource.cpp  hugoviewer.cpp
